--- a/Dockerfile.bundle
+++ b/Dockerfile.bundle
@@ -2,7 +2,7 @@ ARG CHAIN_VERSION=latest
 ARG SF_VERSION=latest
 
 # Here you would actually pull from your own chain image, but for the sake of the demo, we use the dummy-blockchain.
-# The idea is that you bring together your chain's binary at the right and the firehose-acme's binary into a single
+# The idea is that you bring together your chain's binary at the right and the firehose-filecoin's binary into a single
 # image.
 FROM ghcr.io/streamingfast/dummy-blockchain:$CHAIN_VERSION as chain
 
